# Mean_Shift_Project

./: .coveragerc  AUTHORS.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini
docs/: algorithm_design.md  algorithm_design.rst  conf.py  index.rst  readme.md  requirements.txt  results.rst
docs/_static/: custom.css  experiment_table.csv  scaling_table.csv  scaling_table_big.csv
docs/examples/: mean_shift_example.py
experiments/: experiments.py
src/mean_shift_project/: _version.py  mean_shift.py  skeleton.py
tests/: conftest.py  test_convergence.py  test_determinism.py  test_failure_modes.py  test_meanshift_basic.py  test_parity_sklearn.py  test_skeleton.py
